<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roland.myapplication.MultiAddAResistance">


    <TextView
        android:id="@+id/number_of_resistance"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="number of resistances selected :" />

    <TextView
        android:id="@+id/affiche_nbr_resistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Gray"
        android:layout_alignLeft="@id/number_of_resistance"
        android:layout_marginStart="290dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_number_already_enter"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:text="number of resistance already enter :" />

    <TextView
        android:id="@+id/number_already_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Gray"
        android:layout_alignLeft="@id/text_number_already_enter"
        android:layout_marginTop="25dp"
        android:layout_marginStart="290dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/nomber_rings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_already_enter"
        android:layout_marginTop="40dp"
        android:text="Enter the number of rings of resistance :" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/colors_rings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nomber_rings_text"
        android:layout_marginTop="30dp"
        android:text="Select color of any ring :" />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="40dp"
        android:layout_height="90dp"
        android:layout_below="@id/colors_rings_text"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="40dp"
        android:layout_height="90dp"
        android:layout_below="@id/colors_rings_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"/>
    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="40dp"
        android:layout_height="90dp"
        android:layout_below="@id/colors_rings_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"/>
    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="40dp"
        android:layout_height="90dp"
        android:layout_below="@id/colors_rings_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"/>
    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="40dp"
        android:layout_height="90dp"
        android:layout_below="@id/colors_rings_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="240dp"/>
    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="40dp"
        android:layout_height="90dp"
        android:layout_below="@id/colors_rings_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="290dp"/>

    <TextView
        android:id="@+id/resultat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner3"
        android:layout_marginTop="50dp"
        android:text="The value of the resistance is : "/>

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/Gray"
        android:layout_below= "@id/spinner3"
        android:layout_marginTop="40dp"
        android:layout_marginStart="280dp"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NEXT"
        android:layout_above="@id/home"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="callNext"/>

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HOME"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="callHome"/>



</RelativeLayout>
