...
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:text="Evaluate the value of a :"
        />

    <Button
        android:id="@+id/res_val"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="RESISTANCE"
        android:textSize="25sp"
        android:textColor="@color/Black"
        android:alpha="0.7"
        android:textStyle="bold"
        android:onClick="callAddAResistance"
        android:background="@drawable/my_button_bd"
...
